# NES_emulator

./: .clangd  .gitignore  Cargo.toml  Makefile  cases.py  meson.build  plan.md  ppu.txt  text.txt
src/: cpu.cpp  cpu.h  cpu.rs  execute.rs  instructions.rs  instructions.txt  main.cpp  main.rs  memory.rs  nesMemory.cpp  nesMemory.h  ppu.cpp  ppu.h  ppu.rs  utils.cpp  utils.h  utils.rs  window.cpp  window.h  window.rs
tests/6502_tests/roms/: 01_decode_test.nes  02_brk_test.nes  03_ror.nes  timing_test.nes
tests/6502_tests/source/: 01_decode_test.s  02_brk_test.s  03_ror.s  nes.cfg
